# konnektoren-mini-app

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  build.rs  index-24a77e55e068a0d8.css  index-25eaadcb550a3343.css  index-2605c86c82d00cad.css  index-4b0f3f30d61eb1e3.css  index-57366d9f3d96a6b9.css  index-5d82c3371acec238.css  index-6e736777909eb2d1.css  index-711b7059624b4d16.css  index-749996d7c14fc180.css  index-82a8c5956aaa19ef.css  index-8bc7092fbdbf23c.css  index-8df24f85879e8560.css  index-950c08a85c12c9c6.css  index-96d1c65f2e7f59af.css  index-a3f8828a3b431398.css  index-aa04866933ef72f5.css  index-bbb89864c48e76d0.css  index-cc33c2eaaf625c8e.css  index-d61c955f2781307c.css  index-e091c64373131fcf.css  index-e85a46875eebb044.css  index-e88c48fc612937ed.css  index-e9a396aef4e2b6fb.css  index-ee2861ead6a026b0.css  index-f2dd84f9c6b68b6b.css  index-fc331a97998f1546.css  index-fc70a1a825e71a3.css  index-fd2d398fb9588102.css  index.html  justfile  konnektoren-mini-app-17d191ebf1e76e5d.js  konnektoren-mini-app-17d191ebf1e76e5d_bg.wasm  konnektoren-mini-app-2e1064ddb793cfe3_bg.wasm  konnektoren-mini-app-39257ca487ea3e3a.js  (+74 more)
.github/workflows/: gh-pages.yml
assets/challenges/: reflexivpronouns.yml  reflexivpronouns_info.yml
snippets/konnektoren-mini-app-2a7d1357a9147d2f/: inline0.js  inline1.js
src/: app.rs  challenge.rs  challenge_effect.rs  claim.rs  footer.rs  is_correct.rs  lib.rs  main.rs  points.rs  route.rs  telegram.rs  version.rs  wallet.rs
src/api/: profile.rs
src/components/: mod.rs  roulette.rs
src/js/: claim.js  confetti.js  telegram.js  wallet.js
src/model/: game_loader.rs  level_loader.rs  mod.rs  session_initializer_impl.rs
src/pages/: about.rs  challenge.rs  home.rs  mod.rs
styles/: index.css  index.scss  justfile  vendors.css
styles/abstracts/: _colors.scss  _themes.scss  _type.scss  _variables.scss
styles/base/: _global.scss
styles/components/: _button.scss  _challenge.scss  _challenge_result.scss  _claim.scss  _footer.scss  (+18 more)
(+17 files in other folders)
