[package]
name = "konnektoren-mini-app"
version = "0.1.0"
edition = "2021"
description = "Telegram Mini App for Konnektoren"

[lib]
name = "konnektoren_mini_app"
path = "src/lib.rs"

[[bin]]
name = "konnektoren_mini_app_bin"
path = "src/main.rs"

[dependencies]
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21", features = ["csr"] }
