[package]
name = "konnektoren-mini-app"
version = "0.1.1"
edition = "2021"
description = "Telegram Mini App for Konnektoren"

[lib]
name = "konnektoren_mini_app"
path = "src/lib.rs"

[[bin]]
name = "konnektoren_mini_app_bin"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = ["storage"] }
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_log = "1.0.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
web-sys = { version="0.3.69", features = ["HtmlAudioElement"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0.86"